# confluence-to-docs

./: .env.example  .gitignore  DEPLOY.md  Procfile  README.md  app.json  manage.py  package.json  pyproject.toml  requirements.txt
.playwright-mcp/: page-2026-06-02T15-36-51-706Z.yml
citemed/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
portal/: admin.py  apps.py  consumers.py  decorators.py  file_notify.py  file_storage.py  jira_client.py  jira_sync.py  links.py  media_signing.py  models.py  rate_limit.py  realtime.py  routing.py  serializers.py  tasks.py  ticket_notify.py  urls.py  webhook_handlers.py  ws_auth.py
portal/confluence/: client.py  sync.py  transformer.py
portal/jsm/: client.py
portal/migrations/: 0001_initial.py  0002_add_is_folder.py  0003_contactsubmission.py  0004_company_portaluser_access_enabled_portaluser_role_and_more.py  0005_seed_admin_users.py  0006_grant_admins.py  0007_seed_owners.py  0008_bucket_alter_portaluser_role_sharedfile_fileactivity_and_more.py  0009_sharedfile_processed_sharedfile_processed_at_and_more.py  0010_sharedfile_portal_shar_state_d016cb_idx.py  0011_bucket_uniq_general_bucket_per_company.py  0012_fileshare_is_demo.py  0013_seed_demo_customer.py  0014_bucket_last_reminder_at.py  0015_filecomment.py  0016_ticket_ticketmessage_ticketactivity_and_more.py  0017_ticketmessage_delivery_attempted_at_and_more.py  0018_ticketmessage_esp_message_id_and_more.py  0020_ticketread.py  (+4 more)
(+112 files in other folders)
