[project]
name = "confluence-to-docs"
version = "0.1.0"
description = "Pull Confluence docs and serve them through a clean, searchable portal"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2,<5.0",
    "djangorestframework>=3.14",
    "django-environ>=0.11",
    "psycopg2-binary>=2.9",
    "celery>=5.3",
    "django-celery-beat>=2.5",
    "redis>=5.0",
    "lxml>=4.9",
    "bleach>=6.0",
    "django-storages>=1.14",
    "boto3>=1.28",
    "requests>=2.31",
    "Pillow>=10.0",
    "gunicorn>=21.0",
    "trinity-atlassian-cli",
]

[tool.uv.sources]
trinity-atlassian-cli = { git = "https://github.com/ethandrower/atlassian-trinity.git" }
